# mechanics_of_epithelial_domes

./: CMakeLists.txt  README.md  cmake.project.ubuntu.20.04.sh  userConfig.cmake
inflate_hold_deflate/: AuxViscousInextMembrane.cpp  AuxViscousInextMembrane.h  CMakeLists.txt  ViscousInextMembrane.cpp
run_simulation/: config.cfg
run_simulation/Expected results/: sol_dis.0.vtk  sol_dis.100.vtk  sol_dis.1000.vtk  sol_dis.150.vtk  sol_dis.200.vtk  sol_dis.250.vtk  sol_dis.300.vtk  sol_dis.3000.vtk  sol_dis.350.vtk  sol_dis.400.vtk  sol_dis.4000.vtk  sol_dis.450.vtk  sol_dis.4500.vtk  sol_dis.50.vtk  sol_dis.500.vtk  sol_dis.5000.vtk  sol_dis.5500.vtk  sol_dis.6000.vtk  sol_dis.6200.vtk  sol_dis.6500.vtk  sol_dis.6800.vtk  sol_dis.7000.vtk  sol_dis.7200.vtk  sol_dis.7500.vtk  sol_dis.7800.vtk  sol_dis.8000.vtk  sol_dis.8500.vtk
run_simulation/meshes/: aspect_13.vtk  aspect_26.vtk  aspect_70.vtk
run_simulation/paraview_state_file/: paraview_state.pvsm
